# discordbot-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
lavalink_server/: .gitignore  README.md  application.yml  bootstrap.js
src/: commands.rs  constants.rs  edge_cases.rs  general_group.rs  help.rs  lavalink.rs  main.rs  system_fn.rs  wrapper.rs
src/commands/: checks.rs  emoji.rs  emoji_group.rs  general.rs  general_group.rs  help.rs  legacy_voice.rs  legacy_voice_group.rs  mod.rs  owner_group.rs  server_mod.rs  server_mod_group.rs  voice.rs  voice_group.rs  voicelavalink_group.rs
src/commands/checks/: bot_not_in_voice_check.rs  user_in_voice_check.rs  user_in_voice_with_bot_check.rs  user_in_voice_with_bot_or_bot_not_in_any_voice_check.rs
src/commands/emoji/: bird.rs  cat.rs  dog.rs
src/commands/general/: about.rs  am_i_admin.rs  ping.rs  repeat.rs  some_long_command.rs  sub.rs  upper_command.rs
src/commands/legacy_voice/: legacy_deafen.rs  legacy_join.rs  legacy_leave.rs  legacy_mute.rs  legacy_play.rs  legacy_undeafen.rs  legacy_unmute.rs
src/commands/server_mod/: slow_mode.rs
src/commands/voice/: deafen.rs  is_looping.rs  join.rs  leave.rs  loop_song.rs  mute.rs  now_playing.rs  play.rs  queue.rs  skip.rs  undeafen.rs  unloop_song.rs  unmute.rs  wrapper.rs
