[package]
name = "discordbot-rust"
version = "0.1.0"
authors = ["SxweetLollipop <thaolygoat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.10.9"
features = ["client", "framework", "standard_framework", "rustls_backend", "cache", "voice" ]

[dependencies.songbird]
version = "0.2.0"
features = ["youtube-dlc"]

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs/"
branch = "master"
features = ["serenity"]

[dependencies.tokio]
version = "1.11.0"
features = ["macros", "rt-multi-thread", "signal" ]

[dependencies]
tracing = "0.1.26"
tracing-subscriber = "0.2.21"
tracing-appender = "0.1.2"
url = "2.2.2"